# Core_System_2026

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md
.github/: CODEOWNERS
Hardware/Libraries/3DModels/: M2_standoff2mm.stp  S3B-XH-SM4-TB_LF__SN_.stp  TLV1117-33IDCYRG3.stp  USB4736-GF-A.stp  sma_mcrf.stp
Hardware/Libraries/Footprints/Core_System_2026.pretty/: ESP32-S3R16V.kicad_mod  MarsRover.kicad_mod  MarsRoverLogo.kicad_mod  SOT96P240X110-3N.kicad_mod
Hardware/MCU/: MCU.kicad_pcb  MCU.kicad_pro  MCU.kicad_sch
Hardware/MCU/outputs/: MCU_board.step
Software/: main.py
Software/IMU/: platformio.ini
Software/IMU/src/: main.cpp
Software/lib/App/: app.py  ui.py
Software/lib/App/assets/: udegspace.pbm
Software/lib/BSW/: utils.py
Software/rover-coreio/: platformio.ini
Software/rover-coreio/src/: main.cpp
kukulcan/firmware/: README.md
kukulcan/firmware/upio-ros2/: AGENTS.md  README.md  platformio.ini
kukulcan/firmware/upy/: main.py
kukulcan/hardware/: README.md
kukulcan/hardware/MCU/: MCU.kicad_pcb  MCU.kicad_pro  MCU.kicad_sch  MCU.stl  fp-lib-table
kukulcan/hardware/mfr/: MCU-B_Cu.gbr  MCU-B_Mask.gbr  MCU-B_Paste.gbr  MCU-B_Silkscreen.gbr  MCU-Edge_Cuts.gbr  MCU-F_Cu.gbr  MCU-F_Mask.gbr  MCU-F_Paste.gbr  MCU-F_Silkscreen.gbr  MCU-GND.gbr  MCU-NPTH.drl  MCU-PTH.drl  MCU-PWR.gbr  MCU-job.gbrjob
src/teleop_twistmux_node/: CMakeLists.txt  package.xml
src/teleop_twistmux_node/config/: core_system_joy.yaml
src/teleop_twistmux_node/launch/: core_system.launch.xml
src/teleop_twistmux_node/src/: core_system.cpp
(+86 files in other folders)
